<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tiny File Commander</string>
    <string name="dialog_createfile_title">Create new file</string>
    <string name="dialog_createfile_message">Enter filename</string>
    <string name="dialog_createdir_title">Create new directory</string>
    <string name="dialog_createdir_message">Enter directory name</string>
    <string name="dialog_OK">Ok</string>
    <string name="dialog_CANCEL">Cancel</string>
    <string name="contextMenu_rename">Rename</string>
    <string name="contextMenu_delete">Delete</string>
    <string name="dialog_rename_title">Rename File/Directory</string>
    <string name="dialog_rename_message">Enter new name</string>
    <string name="contextMenu_send">Send</string>
    <string name="dialog_delete_title">Delete File</string>
    <string name="dialog_delete_message">Do you realy want to delete this?</string>
    <string name="exception_unknowFileType">Unknown filetyp</string>
    <string name="operation_success">Operation successful</string>
    <string name="operation_failed">Operation failed</string>
    <string name="activation_fastDelete">Instant delete mode activated... click to delete instantly</string>
    <string name="dialog_move_title">Move file</string>
    <string name="dialog_move_message">Move file here?</string>
    <string name="contextMenu_move">Move</string>
    <string name="contextMenu_copy">Copy</string>
    <string name="dialog_copy_title">Copy</string>
    <string name="preference_fastdelete_title">Fast delete mode</string>
    <string name="preference_fastdelete_summary">Show confirmation dialog</string>
    <string name="optionmenu_quit">Quit</string>
    <string name="optionmenu_preferences">Preferences</string>
    <string name="contextMenu_open">Open</string>
    <string name="help_back">This button will move you one directory up</string>
    <string name="help_home">This button will bring you to to your home directory, this is usualy the root directory of your sdcard (internal or external)</string>
    <string name="help_refresh">This will reload the current directory</string>
    <string name="help_fileplus">This button will create an emtpy file in the current directory</string>
    <string name="help_dirplus">This button will create an emtpy directory in the current directory</string>
    <string name="help_drop">This button will be activated when you select a file to move or copy. When you use this button the selected file will be moved or copied to the current driectory.</string>
    <string name="help_fastdelete">This will activate the fast delete mode. While this is activated you can delete everything you touch.</string>
    <string name="optionmenu_help">Help</string>
    <string name="help_contextmenu">There is a context menu available for sending, renaming, viewing, starting, moving, copying files. To show the menu just longpress on a file icon.</string>
    <string name="preference_showFilesize_title">Show Filesize</string>
    <string name="preference_showFilesize_summary">Display filesize below filename</string>
</resources>
